<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_una_cuenta"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_heading">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">



            <EditText
                android:id="@+id/et_primer_nombre"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:hint="@string/nombre"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no"
                android:inputType="text" />



            <EditText
                android:id="@+id/et_apellido"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:hint="@string/apellido"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@+id/et_primer_nombre"
                android:importantForAutofill="no"
                android:inputType="text" />



            <EditText
                android:id="@+id/et_correo"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textColorHint="#808080"
                android:hint="@string/correo"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="#000000"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/et_apellido"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_contrasena"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textColorHint="#808080"
                android:hint="@string/contrase_a"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="#000000"
                android:textSize="15sp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/et_correo"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_repetir_contrasena"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.7"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:hint="@string/repetir_contrase_a"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="15sp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/et_contrasena"
                android:importantForAutofill="no" />


            <Button
                android:id="@+id/btn_registrar"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:background="@color/design_default_color_primary"
                android:text="@string/registrarse"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_repetir_contrasena"
                app:layout_constraintWidth_percent="0.7" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
